Bug 73092 - EDITING: Repeat custom animation path does not remove (paint over with background) end position.
Summary: EDITING: Repeat custom animation path does not remove (paint over with backgr...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1.4.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-28 08:01 UTC by Gregor
Modified: 2019-09-04 13:03 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
.odp Test of path repeat showing persistent final position of an object. (12.37 KB, application/vnd.oasis.opendocument.presentation)
2013-12-28 08:01 UTC, Gregor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gregor 2013-12-28 08:01:47 UTC
Created attachment 91249 [details]
.odp Test of path repeat showing persistent final position of an object.

Problem description: 
If I have a motion path and select repeat, the final position of the object given the path remains visible. Repeat custom animation path does not remove (paint over with background) end position.
Steps to reproduce:
1. Create a presentation with an object on a motion path which does not end where it starts
2. Choose repeat 3 times from the path properties edit box
3. Play the presentation

Current behavior:
The end position remains visible while the object jumps to the start position for the repeat of the path.

Expected behavior:
The end position should be painted over with the background (the object removed from the end position) w2hile the object repeats its motion path.
              
Operating System: Ubuntu
Version: 4.1.4.2 release
Comment 1 A (Andy) 2013-12-28 10:21:18 UTC
thanks for your bug report:
reproducible with LO 4.1.4.2 (Win8)

Remarks to the steps:
1. Open a new presentation in IMPRESS
2. Insert any shape from BASIC SHAPES in the toolbar at the bottom
3. Select the shape and go to the CUSTOMS ANIMATION toolbar on the right and select ADD
4. Select FREEFORM LINE from the tab MOTIONS PATH and press OK
5. Draw a freeform path (not ending at the point where it starts)
6. Select the shape and go to the three dots <...> to the right of the properties field in the CUSTOMS ANIMATION toolbar
7. Go to the tab TIMING and select START = "After Previous" and REPEAT = "3" and press OK
8. Start the presentation from the toolbar button at the top (F5)
Comment 2 QA Administrators 2015-04-19 03:22:44 UTC Comment hidden (obsolete)
Comment 3 Gregor 2015-05-05 03:35:52 UTC
Still a bug in 4.4.2.2
Remnants of shapes remain when motion path is repeated
Comment 4 Klaus Müller 2015-08-18 05:46:46 UTC
The problem is unfortunately still in 5.0.0.5
Comment 5 QA Administrators 2016-09-20 10:25:30 UTC Comment hidden (obsolete)
Comment 6 Gregor 2017-01-12 01:19:32 UTC
Sometimes present in 5.2.4.2
Windows 10
Slide with numerous objects each with custom paths
Comment 7 QA Administrators 2018-07-28 02:42:38 UTC Comment hidden (obsolete)
Comment 8 Commit Notification 2019-03-31 09:39:37 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/bf2f0c913774c90e4c9a65119d0219187bb4498c%5E%21

tdf#73092 remove remaining shape of the repeating animation.

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Luke 2019-03-31 19:14:35 UTC
Verified FIXED in Version: 6.3.0.0.alpha0+ (x64)
Build ID: 3b25ea6d83041c03d06a47fb5e278372181b8a6d

Thanks Mark
Comment 10 Gregor 2019-09-04 13:03:23 UTC
Sorry Mark, still in:
Version: 6.3.0.4 (x64)
Build ID: 057fc023c990d676a43019934386b85b21a9ee99
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: sv-SE (sv_SE); UI-Language: en-US
Calc: threaded
The repeat until end of slide does not completely paint over the final position when repeating a custom motion path.