tdf#73092 remove remaining shape of the repeating animation.

It is neccessary to set a drawshape to invisible (i.e. remove the
effect ) before the drawshape rewind, otherwise it remains at the
original place. The timenode container will ask its child to remove
the effect after all the child finished, before it start to repeat or
it deactivate.

Change-Id: Iaef1a8269b61afa0c37b03655e2ea169f1d3c453